# gpu_glm

./: .gitignore  MANIFEST.in  README.md  helpful_commands  mkdocs.yml  pyproject.toml
.github/: test_all_os.yml  test_linux.yml
.github/workflows/: check_docs.yml  debug.yml  lint.yml  publish_pypi.yml  style_check.yml  test_all_os.yml  test_linux.yml  test_publish_pypi.yml
docs/: index.md
docs/api/: backend_info.md  bernoulli_glm.md  gamma_glm.md  gaussian_glm.md  inverse_gaussian_glm.md  irls.md  poisson_glm.md
src/gpu_glm/: __init__.py  models.py
src/gpu_glm.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_backend_info.py  test_bernoulli.py  test_gamma.py  test_gaussian.py  test_gaussian_scikit.py  test_inverse_gaussian.py  test_poisson.py  test_regularized_bernoulli.py  test_regularized_gamma.py  test_regularized_gaussian.py  test_regularized_inverse_gaussian.py  test_regularized_poisson.py
