[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gpu_glm"
version = "0.0.1"
description = "Regularized GLM models running on a GPU."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"

authors = [
    { name = "Greg McMahan", email = "gmcmacran@gmail.com" }
]

# IMPORTANT:
# Do NOT list CuPy here if you want Conda to install it.
# These dependencies must be CPU‑safe and pip‑installable everywhere.
dependencies = [
    "numpy>=2.4.3",
    "scipy>=1.17.1"
]

[project.optional-dependencies]
# Users who want GPU support can install this extra via pip,
# but Conda users will ignore it and install CuPy themselves.
gpu = [
    "cupy>=14.0.1"
]

dev = [
    "numpy>=2.4.3",
    "scipy>=1.17.1",
    "scikit-learn>=1.8.0",
    "pytest>=9.0.2",
    "ruff>=0.15.1",
    "pre-commit>=4.5.1",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.1",
    "mkdocstrings[python]>=1.0.3"
]

[project.urls]
Homepage = "https://github.com/gmcmacran/gpu_glm"

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "C4"]

[tool.ruff.format]
