[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gpu-glm"
version = "0.1.2"
description = "Regularized GLM models running on a GPU."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"

authors = [
    { name = "Greg McMahan", email = "gmcmacran@gmail.com" }
]

dependencies = [
    "numpy>=2.4.3,<3.0",
    "scipy>=1.10,<1.17"
]

[project.optional-dependencies]
gpu = ["cupy>=14.0.1,<15.0"]

dev = [
    "numpy>=2.4.3,<3.0",
    "scipy>=1.10,<1.17",
    "scikit-learn>=1.8.0",
    "pytest>=9.0.2",
    "ruff>=0.15.1",
    "pre-commit>=4.5.1",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.1",
    "mkdocstrings[python]>=1.0.3"
]

[project.urls]
Homepage = "https://github.com/gmcmacran/gpu_glm"

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "C4"]

[tool.ruff.format]

[tool.setuptools]
include-package-data = true

[tool.setuptools.data-files]
"tests" = ["tests/*.py"]
